--- a/blockly.css
+++ b/blockly.css
@@ -6,7 +6,22 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    
 }
 body h1{
+    font-size: 40px;
+    font-weight: 200;
+    text-align: center;
+}
+body p{
+    text-align: center;
+    font-size: 18px;
+}   
+
+body #blocklyDiv {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+
 
 }
