--- a/blockly.css
+++ b/blockly.css
@@ -8,20 +8,23 @@ body{
     font-family: 'Roboto', sans-serif;
     
 }
-body h1{
+header{
+
+}
+body header h1{
     font-size: 40px;
     font-weight: 200;
     text-align: center;
+    margin-top: 0;
 }
-body p{
+body header p{
     text-align: center;
     font-size: 18px;
+    margin-top: -20px;
 }   
 
 body #blocklyDiv {
-    position: absolute;
+    margin: 0 auto;
     width: 100%;
     height: 100vh;
-
-
 }
