--- a/blockly.css
+++ b/blockly.css
@@ -6,24 +6,35 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    
 }
 header{
-
+    width: 20%;
+    float: left;
+    text-align: center;
 }
-body header h1{
+header button{
+    width: 75%;
+    height: 40px;
+    background-color: white;
+}
+header h1{
     font-size: 40px;
     font-weight: 200;
     text-align: center;
     margin-top: 0;
 }
-body header p{
+header p#under{
     text-align: center;
     font-size: 18px;
     margin-top: -20px;
 }   
-
-body #blocklyDiv {
+header p#Intro{
+    text-align: justify;
+    width: 75%;
+    margin: 20px auto;
+    line-height: 20px;
+}
+#blocklyDiv {
     margin: 0 auto;
     width: 100%;
     height: 100vh;
