--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,8 @@
                 <block type="text_print"></block>
                 <block type="go_forward"></block>
                 <block type="go_backward"></block>
+                <block type="turn_left"></block>
+                <block type="turn_right"></block>
             </xml>
     </div>
     
