--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
                 <block type="go_backward"></block>
                 <block type="turn_left"></block>
                 <block type="turn_right"></block>
+                <block type="serial_pin"></block>
             </xml>
     </div>
     
