changes to blocks

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-     <link rel="stylesheet" href="static/css/blockly.css">
+     <link rel="stylesheet" href="../static/css/blockly.css">
     <title>UwU Tank driving app UwU</title>
 </head>
 <body>
@@ -28,13 +28,13 @@
                 <block type="logic_compare"></block>
                 <block type="math_number"></block>
                 <block type="math_arithmetic"></block>
-                <block type="text"></block>
-                <block type="text_print"></block>
                 <block type="go_forward"></block>
                 <block type="go_backward"></block>
                 <block type="turn_left"></block>
                 <block type="turn_right"></block>
                 <block type="serial_pin"></block>
+                <block type="serial_pin_time"></block>
+                <block type="wait"></block>
             </xml>
     </div>
     
