--- a/static/css/blockly.css
+++ b/static/css/blockly.css
@@ -6,41 +6,48 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
+    
 }
 header{
-    width: 20%;
+    width: 15%;
     float: left;
     text-align: center;
 }
-header button{
-    width: 75%;
-    height: 40px;
-    background-color: white;
-}
+
 header h1{
-    font-size: 40px;
+    font-size: 2.5vw;
     font-weight: 200;
     text-align: center;
     margin-top: 0;
 }
 header p#under{
     text-align: center;
-    font-size: 18px;
+    font-size: 1vw;
     margin-top: -20px;
 }   
-header p#Intro{
-    text-align: justify;
-    width: 75%;
-    margin: 20px auto;
-    line-height: 20px;
-}
 #blocklyDiv {
-    margin: 0 auto;
-    width: 100%;
+    margin: auto;
+    width: 76vw;
     height: 100vh;
 }
 
+textarea#javaScriptcodeUpdate{
+  background-color: #111;
+  color: #FF0000;
+  border: 0;
 
+  resize: none; 
+  font-size: 18px;
+  font-weight: 200;
+
+  padding: 20px;
+  height: 100vh;
+  width: 20vw;
+  position: absolute;
+  top: 0;
+  left: 78vw;
+}
 
 a {
     text-decoration: none;
@@ -61,7 +68,7 @@ a {
     display: block;
     border-radius: 28px;
     background: rgba(255, 171, 157, 0.5);
-    width: 56px;
+    width: 30%;
     height: 56px;
     transition: all 0.3s ease;
   }
@@ -77,7 +84,7 @@ a {
   .cta svg {
     position: relative;
     top: 0;
-    margin-left: 10px;
+    margin: 0 auto;
     fill: none;
     stroke-linecap: round;
     stroke-linejoin: round;
@@ -95,4 +102,129 @@ a {
   }
   .cta:active {
     transform: scale(0.96);
+  } 
+  
+  /*
+  ::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;  
+}*/
+
+  @media only screen and (max-width: 1550px) {
+    header{
+      width: 15%;
+      float: left;
+      text-align: center;
+  }
+  .cta span {
+    position: relative;
+    font-size: 1vw;
+    line-height: 18px;
+    font-weight: 900;
+    letter-spacing: 0.25em;
+    text-transform: uppercase;
+    vertical-align: middle;
+  }
+  header h1{
+      font-weight: 200;
+      text-align: center;
+      margin-top: 0;
+  }
+  header p#under{
+      text-align: center;
+      font-size: 1vw;
+      margin-top: -20px;
+  }  
+  }
+
+  @media only screen and (max-width: 1250px) {
+    body{
+      margin: 0;
+      padding: 0;
+      font-family: 'Roboto', sans-serif;
+      overflow-y: visible;
+      overflow-x: hidden;
+    }
+    #blocklyDiv {
+      width: 99vw;
+      height: 100vh;
+   }
+   header{
+    width: 20%;
+    float: left;
+    text-align: center;
+  }
+    textarea#javaScriptcodeUpdate{
+      background-color: #111;
+      color: #FF0000;
+      border: 0;
+    
+      resize: none; 
+      font-size: 18px;
+      font-weight: 200;
+    
+      padding: 20px;
+      height: 20vh;
+      width: 76vw;
+      position: relative;
+      left: 20%;
+    }
+
+  }
+  @media only screen and (max-width: 950px) {
+    .cta span {
+      position: relative;
+      font-size: 18px;
+      line-height: 18px;
+      font-weight: 900;
+      letter-spacing: 0.25em;
+      text-transform: uppercase;
+      vertical-align: middle;
+    }
+    header h1{
+      font-size: 40px;
+      font-weight: 200;
+      text-align: center;
+      margin-top: 0;
+  }
+    body{
+      margin: 0;
+      padding: 0;
+      font-family: 'Roboto', sans-serif;
+      overflow-y: visible;
+      overflow-x: hidden;
+    }
+    #blocklyDiv {
+      width: 100vw;
+      height: 100vh;
+      position: absolute;
+      top: 18%;
+   }
+  header p#under{
+      text-align: center;
+      font-size: 18px;
+      margin-top: -20px;
+  } 
+   header{
+    width: 100%;
+    text-align: center;
+  }
+    textarea#javaScriptcodeUpdate{
+      background-color: #111;
+      color: #FF0000;
+      border: 0;
+    
+      resize: none; 
+      font-size: 18px;
+      font-weight: 200;
+    
+      
+      height: 20vh;
+      width: 100vw;
+      max-width:100vw;
+      position: relative;
+      left: 0%;
+      top: 106vh;
+
+    }
   }
