--- a/templates/main.html
+++ b/templates/main.html
@@ -19,7 +19,13 @@
           <polyline points="8 1 12 5 8 9"></polyline>
         </svg>
       </a>
-    </header>>
+      <button id ="dwn-btn">
+
+        DOWNLOAD SOURCE FILE
+
+      </button>
+    </header>
+    
     <div id="blocklyDiv">
             <xml id="toolbox" style="display: none">
                 <block type="controls_if"></block>
